# Game_Engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Game_Engine/: CMakeLists.txt  CMakeSettings.json  main.cpp
Game_Engine/engine/: Engine.cpp  Engine.h
Game_Engine/sdl_wrapper/: Image_Handler.cpp  Image_Handler.h  Input_Events.cpp  Input_Events.h  Renderer.cpp  Renderer.h  SDL_Helpers.cpp  SDL_Helpers.h  SDL_Loader.cpp  SDL_Loader.h  Window.cpp  Window.h
Game_Engine/sdl_wrapper/config/: ImagePathCfg.cpp  ImagePathCfg.h  WindowCfg.h
Game_Engine/utils/: EventDefines.h
Game_Engine/utils/drawing/: DrawParams.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h
Game_Engine/utils/time_measurement/: Time.cpp  Time.h
cmake_helpers/: helpers.cmake
common_defines/: Common_Defines.h
engine/: Engine.cpp  Engine.h
game/: Game.cpp  Game.h  Image.cpp  Image.h  Text.cpp  Text.h  Widget.cpp  Widget.h
game/widget/: Hero.cpp  Hero.h  Image.cpp  Image.h  Text.cpp  Text.h  Widget.cpp  Widget.h
manager_utils/: DrawMgr.cpp  DrawMgr.h  MgrHandler.cpp  MgrHandler.h  RsrcMgr.cpp  RsrcMgr.h
sdl_wrapper/: CMakeLists.txt  Image_Handler.cpp  Image_Handler.h  Input_Events.h  Renderer.cpp  Renderer.h  SDL_Helpers.cpp  SDL_Helpers.h  SDL_Loader.cpp  SDL_Loader.h
sdl_wrapper/config/: ImageCfg.cpp  ImageCfg.h  TextCfg.cpp  TextCfg.h  WindowCfg.h
sdl_wrapper/containers/: IHandler.h  Image_Handler.cpp  Image_Handler.h  Text_Handler.cpp  Text_Handler.h
sdl_wrapper/include/sdl_wrapper/: Input_Events.h  Renderer.h  SDL_Helpers.h  Window.h
sdl_wrapper/include/sdl_wrapper/config/: ImageCfg.h  TextCfg.h  WindowCfg.h
sdl_wrapper/include/sdl_wrapper/containers/: IHandler.h  Image_Handler.h  Text_Handler.h
sdl_wrapper/src/: Input_Events.cpp  Renderer.cpp  SDL_Helpers.cpp  SDL_Loader.cpp  Window.cpp
sdl_wrapper/src/config/: ImageCfg.cpp  TextCfg.cpp
sdl_wrapper/src/containers/: IHandler.cpp  Image_Handler.cpp  Text_Handler.cpp
utils/: CMakeLists.txt
utils/drawing/: Color.cpp  Color.h  DrawParams.h  Rectangle.cpp  Rectangle.h
utils/include/utils/drawing/: DrawParams.h  Point.h  Rectangle.h
utils/include/utils/thread/: ThreadUtils.h
utils/src/drawing/: Color.cpp  Point.cpp  Rectangle.cpp
utils/src/thread/: ThreadUtils.cpp
utils/src/time_measurement/: Time.cpp
utils/thread/: ThreadUtils.cpp
